src/main/java/de/mrvnndr/skadi/analysis/SkadiRegexParser.java
package de.mrvnndr.skadi.analysis;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SkadiRegexParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            CH_a = 1, CH_b = 2, CH_c = 3, CH_d = 4, CH_e = 5, CH_f = 6, CH_n = 7, CH_r = 8, CH_s = 9,
            CH_t = 10, CH_v = 11, CH_w = 12, CH_x = 13, CH_A = 14, CH_B = 15, CH_C = 16, CH_D = 17,
            CH_E = 18, CH_F = 19, CH_S = 20, CH_W = 21, ZERO = 22, NON_ZERO_DIGIT = 23, PAREN_OPEN = 24,
            PAREN_CLOSED = 25, CURLY_OPEN = 26, CURLY_CLOSED = 27, BRACKET_OPEN = 28, BRACKET_CLOSED = 29,
            CIRCUMFLEX = 30, DASH = 31, UNDERSCORE = 32, STAR = 33, BACKSLASH = 34, PERIOD = 35,
            COMMA = 36, DOLLAR = 37, PLUS = 38, COLON = 39, QUESTION_MARK = 40, VERT_BAR = 41,
            CHAR = 42, PATTERN_CHAR = 43;
    public static final int
            RULE_regex = 0, RULE_inner_regex = 1, RULE_alternative = 2, RULE_term = 3,
            RULE_assertion = 4, RULE_quantifier = 5, RULE_quantifier_prefix = 6, RULE_atom = 7,
            RULE_atom_escape = 8, RULE_character_escape = 9, RULE_control_escape = 10,
            RULE_control_letter = 11, RULE_identity_escape = 12, RULE_decimal_escape = 13,
            RULE_hex_escape_sequence = 14, RULE_hex_digit = 15, RULE_character_class_escape = 16,
            RULE_character_class = 17, RULE_class_ranges = 18, RULE_non_empty_class_ranges = 19,
            RULE_non_empty_class_ranges_no_dash = 20, RULE_class_atom = 21, RULE_class_atom_no_dash = 22,
            RULE_class_escape = 23, RULE_rule_reference = 24, RULE_rule_name = 25,
            RULE_pattern_char = 26, RULE_digit = 27, RULE_char = 28;

    private static String[] makeRuleNames() {
        return new String[]{
                "regex", "inner_regex", "alternative", "term", "assertion", "quantifier",
                "quantifier_prefix", "atom", "atom_escape", "character_escape", "control_escape",
                "control_letter", "identity_escape", "decimal_escape", "hex_escape_sequence",
                "hex_digit", "character_class_escape", "character_class", "class_ranges",
                "non_empty_class_ranges", "non_empty_class_ranges_no_dash", "class_atom",
                "class_atom_no_dash", "class_escape", "rule_reference", "rule_name",
                "pattern_char", "digit", "char"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'a'", "'b'", "'c'", "'d'", "'e'", "'f'", "'n'", "'r'", "'s'",
                "'t'", "'v'", "'w'", "'x'", "'A'", "'B'", "'C'", "'D'", "'E'", "'F'",
                "'S'", "'W'", "'0'", null, "'('", "')'", "'{'", "'}'", "'['", "']'",
                "'^'", "'-'", "'_'", "'*'", "'\\'", "'.'", "','", "'$'", "'+'", "':'",
                "'?'", "'|'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, "CH_a", "CH_b", "CH_c", "CH_d", "CH_e", "CH_f", "CH_n", "CH_r",
                "CH_s", "CH_t", "CH_v", "CH_w", "CH_x", "CH_A", "CH_B", "CH_C", "CH_D",
                "CH_E", "CH_F", "CH_S", "CH_W", "ZERO", "NON_ZERO_DIGIT", "PAREN_OPEN",
                "PAREN_CLOSED", "CURLY_OPEN", "CURLY_CLOSED", "BRACKET_OPEN", "BRACKET_CLOSED",
                "CIRCUMFLEX", "DASH", "UNDERSCORE", "STAR", "BACKSLASH", "PERIOD", "COMMA",
                "DOLLAR", "PLUS", "COLON", "QUESTION_MARK", "VERT_BAR", "CHAR", "PATTERN_CHAR"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "SkadiRegex.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public SkadiRegexParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class RegexContext extends ParserRuleContext {
        public List<AlternativeContext> alternative() {
            return getRuleContexts(AlternativeContext.class);
        }

        public AlternativeContext alternative(int i) {
            return getRuleContext(AlternativeContext.class, i);
        }

        public TerminalNode EOF() {
            return getToken(SkadiRegexParser.EOF, 0);
        }

        public List<TerminalNode> VERT_BAR() {
            return getTokens(SkadiRegexParser.VERT_BAR);
        }

        public TerminalNode VERT_BAR(int i) {
            return getToken(SkadiRegexParser.VERT_BAR, i);
        }

        public RegexContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_regex;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).enterRegex(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).exitRegex(this);
        }
    }

    public final RegexContext regex() throws RecognitionException {
        RegexContext _localctx = new RegexContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_regex);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(58);
                alternative();
                setState(63);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == VERT_BAR) {
                    {
                        {
                            setState(59);
                            match(VERT_BAR);
                            setState(60);
                            alternative();
                        }
                    }
                    setState(65);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(66);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Inner_regexContext extends ParserRuleContext {
        public List<AlternativeContext> alternative() {
            return getRuleContexts(AlternativeContext.class);
        }

        public AlternativeContext alternative(int i) {
            return getRuleContext(AlternativeContext.class, i);
        }

        public List<TerminalNode> VERT_BAR() {
            return getTokens(SkadiRegexParser.VERT_BAR);
        }

        public TerminalNode VERT_BAR(int i) {
            return getToken(SkadiRegexParser.VERT_BAR, i);
        }

        public Inner_regexContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_inner_regex;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).enterInner_regex(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).exitInner_regex(this);
        }
    }

    public final Inner_regexContext inner_regex() throws RecognitionException {
        Inner_regexContext _localctx = new Inner_regexContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_inner_regex);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(68);
                alternative();
                setState(73);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == VERT_BAR) {
                    {
                        {
                            setState(69);
                            match(VERT_BAR);
                            setState(70);
                            alternative();
                        }
                    }
                    setState(75);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class AlternativeContext extends ParserRuleContext {
        public List<TermContext> term() {
            return getRuleContexts(TermContext.class);
        }

        public TermContext term(int i) {
            return getRuleContext(TermContext.class, i);
        }

        public AlternativeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_alternative;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).enterAlternative(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).exitAlternative(this);
        }
    }

    public final AlternativeContext alternative() throws RecognitionException {
        AlternativeContext _localctx = new AlternativeContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_alternative);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(79);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14003036225534L) != 0)) {
                    {
                        {
                            setState(76);
                            term();
                        }
                    }
                    setState(81);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class TermContext extends ParserRuleContext {
        public TermContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_term;
        }

        public TermContext() {
        }

        public void copyFrom(TermContext ctx) {
            super.copyFrom(ctx);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class AtomBaseContext extends TermContext {
        public AtomContext atom() {
            return getRuleContext(AtomContext.class, 0);
        }

        public AtomBaseContext(TermContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).enterAtomBase(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).exitAtomBase(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class AtomQuantifierContext extends TermContext {
        public AtomContext atom() {
            return getRuleContext(AtomContext.class, 0);
        }

        public QuantifierContext quantifier() {
            return getRuleContext(QuantifierContext.class, 0);
        }

        public AtomQuantifierContext(TermContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).enterAtomQuantifier(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).exitAtomQuantifier(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class AtomAssertionContext extends TermContext {
        public AssertionContext assertion() {
            return getRuleContext(AssertionContext.class, 0);
        }

        public AtomAssertionContext(TermContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).enterAtomAssertion(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).exitAtomAssertion(this);
        }
    }

    public final TermContext term() throws RecognitionException {
        TermContext _localctx = new TermContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_term);
        try {
            setState(87);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
                case 1:
                    _localctx = new AtomBaseContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(82);
                    atom();
                }
                break;
                case 2:
                    _localctx = new AtomQuantifierContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(83);
                    atom();
                    setState(84);
                    quantifier();
                }
                break;
                case 3:
                    _localctx = new AtomAssertionContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(86);
                    assertion();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class AssertionContext extends ParserRuleContext {
        public TerminalNode CIRCUMFLEX() {
            return getToken(SkadiRegexParser.CIRCUMFLEX, 0);
        }

        public TerminalNode DOLLAR() {
            return getToken(SkadiRegexParser.DOLLAR, 0);
        }

        public TerminalNode BACKSLASH() {
            return getToken(SkadiRegexParser.BACKSLASH, 0);
        }

        public TerminalNode CH_b() {
            return getToken(SkadiRegexParser.CH_b, 0);
        }

        public TerminalNode CH_B() {
            return getToken(SkadiRegexParser.CH_B, 0);
        }

        public AssertionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_assertion;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).enterAssertion(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).exitAssertion(this);
        }
    }

    public final AssertionContext assertion() throws RecognitionException {
        AssertionContext _localctx = new AssertionContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_assertion);
        try {
            setState(95);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(89);
                    match(CIRCUMFLEX);
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(90);
                    match(DOLLAR);
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(91);
                    match(BACKSLASH);
                    setState(92);
                    match(CH_b);
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(93);
                    match(BACKSLASH);
                    setState(94);
                    match(CH_B);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class QuantifierContext extends ParserRuleContext {
        public Quantifier_prefixContext quantifier_prefix() {
            return getRuleContext(Quantifier_prefixContext.class, 0);
        }

        public QuantifierContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_quantifier;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).enterQuantifier(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).exitQuantifier(this);
        }
    }

    public final QuantifierContext quantifier() throws RecognitionException {
        QuantifierContext _localctx = new QuantifierContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_quantifier);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(97);
                quantifier_prefix();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Quantifier_prefixContext extends ParserRuleContext {
        public Quantifier_prefixContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_quantifier_prefix;
        }

        public Quantifier_prefixContext() {
        }

        public void copyFrom(Quantifier_prefixContext ctx) {
            super.copyFrom(ctx);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class QuantifierPlusContext extends Quantifier_prefixContext {
        public TerminalNode PLUS() {
            return getToken(SkadiRegexParser.PLUS, 0);
        }

        public QuantifierPlusContext(Quantifier_prefixContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).enterQuantifierPlus(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).exitQuantifierPlus(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class QuantifierQuestionMarkContext extends Quantifier_prefixContext {
        public TerminalNode QUESTION_MARK() {
            return getToken(SkadiRegexParser.QUESTION_MARK, 0);
        }

        public QuantifierQuestionMarkContext(Quantifier_prefixContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener)
                ((SkadiRegexListener) listener).enterQuantifierQuestionMark(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener)
                ((SkadiRegexListener) listener).exitQuantifierQuestionMark(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class QuantifierBetweenContext extends Quantifier_prefixContext {
        public DigitContext digit;
        public List<DigitContext> amtL = new ArrayList<DigitContext>();
        public List<DigitContext> amtH = new ArrayList<DigitContext>();

        public TerminalNode CURLY_OPEN() {
            return getToken(SkadiRegexParser.CURLY_OPEN, 0);
        }

        public TerminalNode COMMA() {
            return getToken(SkadiRegexParser.COMMA, 0);
        }

        public TerminalNode CURLY_CLOSED() {
            return getToken(SkadiRegexParser.CURLY_CLOSED, 0);
        }

        public List<DigitContext> digit() {
            return getRuleContexts(DigitContext.class);
        }

        public DigitContext digit(int i) {
            return getRuleContext(DigitContext.class, i);
        }

        public QuantifierBetweenContext(Quantifier_prefixContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).enterQuantifierBetween(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).exitQuantifierBetween(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class QuantifierExactlyContext extends Quantifier_prefixContext {
        public TerminalNode CURLY_OPEN() {
            return getToken(SkadiRegexParser.CURLY_OPEN, 0);
        }

        public TerminalNode CURLY_CLOSED() {
            return getToken(SkadiRegexParser.CURLY_CLOSED, 0);
        }

        public List<DigitContext> digit() {
            return getRuleContexts(DigitContext.class);
        }

        public DigitContext digit(int i) {
            return getRuleContext(DigitContext.class, i);
        }

        public QuantifierExactlyContext(Quantifier_prefixContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).enterQuantifierExactly(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).exitQuantifierExactly(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class QuantifierStarContext extends Quantifier_prefixContext {
        public TerminalNode STAR() {
            return getToken(SkadiRegexParser.STAR, 0);
        }

        public QuantifierStarContext(Quantifier_prefixContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).enterQuantifierStar(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).exitQuantifierStar(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class QuantifierAtLeastContext extends Quantifier_prefixContext {
        public TerminalNode CURLY_OPEN() {
            return getToken(SkadiRegexParser.CURLY_OPEN, 0);
        }

        public TerminalNode COMMA() {
            return getToken(SkadiRegexParser.COMMA, 0);
        }

        public TerminalNode CURLY_CLOSED() {
            return getToken(SkadiRegexParser.CURLY_CLOSED, 0);
        }

        public List<DigitContext> digit() {
            return getRuleContexts(DigitContext.class);
        }

        public DigitContext digit(int i) {
            return getRuleContext(DigitContext.class, i);
        }

        public QuantifierAtLeastContext(Quantifier_prefixContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).enterQuantifierAtLeast(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SkadiRegexListener) ((SkadiRegexListener) listener).exitQuantifierAtLeast(this);
        }
    }

    public final Quantifier_prefixContext quantifier_prefix() throws RecognitionException {
        Quantifier_prefixContext _localctx = new Quantifier_prefixContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_quantifier_prefix);
        int _la;
        try {
            setState(133);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 9, _ctx)) {
                case 1:
                    _localctx = new QuantifierStarContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(99);
                    match(STAR);
                }
                break;
                case 2:
                    _localctx = new QuantifierPlusContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(100);
                    match(PLUS);
                }
                break;
                case 3:
                    _localctx = new QuantifierQuestionMarkContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(101);
                    match(QUESTION_MARK);
                }
                break;
                case 4:
                    _localctx = new QuantifierExactlyContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                {
                    setState(102);
                    match(CURLY_OPEN);
                    setState(104);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    do {
                        {
                            {
                                setState(103);
                                digit();
                            }
                        }
                        setState(106);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    } while (_la == ZERO || _la == NON_ZERO_DIGIT);
                    setState(108);
                    match(CURLY_CLOSED);
                }
                break;
                case 5:
                    _localctx = new QuantifierAtLeastContext(_localctx);
                    enterOuterAlt(_localctx, 5);
                {
                    setState(110);
                    match(CURLY_OPEN);
                    setState(112);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    do {
                        {
                            {
                                setState(111);
                                digit();
                            }
                        }
                        setState(114);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    } while (_la == ZERO || _la == NON_ZERO_DIGIT);
                    setState(116);
                    match(COMMA);
                    setState(117);
                    match(CURLY_CLOSED);
                }
                break;
                case 6:
                    _localctx = new QuantifierBetweenContext(_localctx);
                    enterOuterAlt(_localctx, 6);
                {
                    setState(119);
                    match(CURLY_OPEN);
                    setState(121);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    do {
                        {
                            {
                                setState(120);
                                ((QuantifierBetweenContext) _localctx).digit = digit();
                                ((QuantifierBetweenContext) _localctx).amtL.add(((QuantifierBetweenContext) _localctx).digit);
                            }
                        }
                        setState(123);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    } while (_la == ZERO || _la == NON_ZERO_DIGIT);
                    setState(125);
                    match(COMMA);
                    setState(127);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    do {
                        {
                            {
                                setState(126);
                                ((QuantifierBetweenContext) _localctx).digit = digit();
                                ((QuantifierBetweenContext) _localctx).amtH.add(((QuantifierBetweenContext) _localctx).digit);
                            }
                        }
                        setState(129);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    } while (_la == ZERO || _la == NON_ZERO_DIGIT);
                    setState(131);
                    match(CURLY_CLOSED);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class AtomContext extends ParserRuleContext {
        public AtomContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_atom;
        }

        public AtomContext() {
        }

        public void copyFrom(AtomContext ctx) {
            super.copyFrom(ctx);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class AtomAtomEscapeContext extends AtomContext {
        public TerminalNode BACKSLASH() {
            return getToken(SkadiRegexParser.BACKSLASH, 0);
        }

        public Atom_escapeContext atom_escape() {
            return getRuleContext(Atom_escapeContext.class, 0);
        }
